gccida/c3/init_optabs
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_optabs/src/optabs.c:5206:7: error: expected expression
optab::$B50C8071A5A789E219D5EDC319094081 *handlers; // [rsp+0h] [rbp-20h] 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_optabs/src/optabs.c:5361:1: error: use of undeclared identifier 'handlers'
handlers = optab_table[37]->handlers; 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_optabs/src/optabs.c:5362:1: error: use of undeclared identifier 'handlers'
handlers[mode_for_size( 0x20u, MODE_INT, 0)].libfunc = inited; 
^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_optabs/src/obj/optabs.o] Error 1
